24년 12월 업데이트 - 포트폴리오 추가 - 합격회사 이미지 추가 - 후기 추가 - 조치원 이력 추가

--- a/index.html
+++ b/index.html
@@ -302,6 +302,8 @@
                     <div class="swiper-slide"><img src="assets/img/clients/client-4.png" class="img-fluid" alt=""></div>
                     <div class="swiper-slide"><img src="assets/img/clients/client-5.png" class="img-fluid" alt=""></div>
                     <div class="swiper-slide"><img src="assets/img/clients/client-6.png" class="img-fluid" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>
+                    <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>
                     <!--            <div class="swiper-slide"><img src="assets/img/clients/client-7.png" class="img-fluid" alt=""></div>-->
                     <!--            <div class="swiper-slide"><img src="assets/img/clients/client-8.png" class="img-fluid" alt=""></div>-->
                 </div>
@@ -543,6 +545,51 @@
             </div>
 
             <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4>collaboration-board-server</h4>
+                            <p>네이버 웍스 같은 사내 게시판 협업 툴 서버버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/collaboration-board-server"
+                                   title="collaboration-board-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4>Auction-server</h4>
+                            <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/Auction-server"
+                                   title="Auction-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                    <div class="portfolio-wrap">
+                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <div class="portfolio-info">
+                            <h4>community-server</h4>
+                            <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
+                            <div class="portfolio-links">
+                                <a href="https://github.com/ccommit/community-server"
+                                   title="community-server"
+                                   target="_blank"><i class="bx bx-link"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
@@ -558,34 +605,8 @@
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>Auction-server</h4>
-                            <p>옥션 중고 경매 시스템과 같은 경매 서비스 백엔드 서버</p>
-                            <div class="portfolio-links">
-                                <a href="https://github.com/ccommit/Auction-server"
-                                   title="Auction-server"
-                                   target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
-                    <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
-                        <div class="portfolio-info">
-                            <h4>community-server</h4>
-                            <p>inven 과 같은 커뮤니티 서비스의 벡엔드 서버</p>
-                            <div class="portfolio-links">
-                                <a href="https://github.com/ccommit/community-server"
-                                   title="community-server"
-                                   target="_blank"><i class="bx bx-link"></i></a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
+
                 <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
                         <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
@@ -631,9 +652,9 @@
                 <!--                </div>-->
 
 
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>fashion-commerce-server</h4>
                             <p>무신사 같은 패션커머스 주문 서버</p>
@@ -645,9 +666,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>bookbook</h4>
                             <p>책을 통한 생각 공유를 통해 사람과 사람을 연결하는 벡엔드 서버</p>
@@ -659,9 +680,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>shop-server</h4>
                             <p>네이버 쇼핑 같은 쇼핑 백엔드 시스템</p>
@@ -673,9 +694,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 portfolio-item filter-ing">
+                <div class="col-lg-4 col-md-6 portfolio-item filter-publish">
                     <div class="portfolio-wrap">
-                        <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+                        <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
                         <div class="portfolio-info">
                             <h4>FundingServer</h4>
                             <p>와디즈 같은 펀딩 시스템의 백엔드 서버</p>
@@ -719,7 +740,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-emoji-smile"></i>
                                     <p>멘티 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="66"
+                                    <span data-purecounter-start="0" data-purecounter-end="68"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -730,7 +751,7 @@
                                 <div class="count-box">
                                     <i class="bi bi-journal-richtext"></i>
                                     <p>프로젝트 수</p>
-                                    <span data-purecounter-start="0" data-purecounter-end="16"
+                                    <span data-purecounter-start="0" data-purecounter-end="10"
                                           data-purecounter-duration="2" class="purecounter"
                                           style="padding-top:4px;"></span>
 
@@ -757,7 +778,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2024년 11월 기준</span>
+                            <span style="text-align:right;">2024년 12월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
@@ -772,6 +793,22 @@
 
             <div class="testimonials-slider swiper" data-aos="fade-up" data-aos-delay="100">
                 <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="testimonial-item">
+                            <!--                            <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">-->
+                            <h3>나OO</h3>
+                            <h4>전공자 취업 준비</h4>
+                            <p>
+                                <i class="bx bxs-quote-alt-left quote-icon-left"></i>
+                                저번 멘토링 프로그램 들었던 나OO입니다.<br>
+                                멘토링을 통해 많은 가르침을 받았고, 덕분에 좋은 기회들을 마주할 수 있었던 것 같습니다.<br>
+                                멘토링 덕분에 최종합격해서 다음주부터 출근하기로 했습니다.<br>
+                                항상 감사한 마음을 가지고 있습니다.<br>
+                                감사합니다 :]
+                                <i class="bx bxs-quote-alt-right quote-icon-right"></i>
+                            </p>
+                        </div>
+                    </div><!-- End testimonial item -->
 
                     <div class="swiper-slide">
                         <div class="testimonial-item">
@@ -932,9 +969,10 @@
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 개발 경력 7년 이상, 수업 경력 3년 이상 </span>
                             <hr style="margin:0.5rem;border-top: 2px dotted"/>
+                            <span>- 홍익대 조치원 캠퍼스 취업 특강 (24.11) </span>
                             <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.12) </span>
                             <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
-                            <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>
+<!--                            <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>-->
                         </div>
                     </div>
                 </div>
