AI 개발 실무적용 커리큘럼 추가

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                             <h3><a href="#services">클라우드 <br>기술 적용</a></h3>
                         </div>
                     </div>
-                    <dib></dib>
+
                     <div class="col-xl-2 col-md-4">
                         <div class="icon-box">
                             <i class="bi-star fs-1"></i>
@@ -172,6 +172,12 @@
                         <div class="icon-box">
                             <i class="bi-eye fs-1"></i>
                             <h3><a href="#services">가상화 <br>기술 적용</a></h3>
+                        </div>
+                    </div>
+                    <div class="col-xl-2 col-md-4">
+                        <div class="icon-box">
+                            <i class="bi-robot fs-1"></i>
+                            <h3><a href="#services">AI를 활용한 개발 실무</a></h3>
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-4">
@@ -458,7 +464,20 @@
                 </div>
 
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"
-                     OnClick="window.open('https://sepia-coat-481.notion.site/8-1f96cb4e7e4e4c04932a2bcf4e4d2eaf')">
+                     OnClick="window.open('https://sepia-coat-481.notion.site/8-AI-1f96cb4e7e4e4c04932a2bcf4e4d2eaf')">
+                    <div class="icon-box">
+                        <div class="icon"><i class="bi bi-people"></i></div>
+                        <h4><a>
+                            AI를 활용한 개발 실무</a></h4>
+                        <p>chatgpt, copilot, cursor 활용법 이해 <br>
+                            개발 생산성을 높이기 위해 AI를 실무 적용<br>
+                            AI 결과물을 검토하고 필요한 부분을 보완</p>
+
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"
+                     OnClick="window.open('https://sepia-coat-481.notion.site/9-1feb91352d8a8082b136fa6597052d0d')">
                     <div class="icon-box">
                         <div class="icon"><i class="bi bi-people"></i></div>
                         <h4><a>
