--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                 <div class="col-lg-4 col-md-6  align-items-stretch mt-4" data-aos="zoom-in" data-aos-delay="200"
                      OnClick="window.open('https://sepia-coat-481.notion.site/8-AI-1f96cb4e7e4e4c04932a2bcf4e4d2eaf')">
                     <div class="icon-box">
-                        <div class="icon"><i class="bi bi-people"></i></div>
+                        <div class="icon"><i class="bi bi-robot"></i></div>
                         <h4><a>
                             AI를 활용한 개발 실무</a></h4>
                         <p>chatgpt, copilot, cursor 활용법 이해 <br>
