25년 11월 업데이트 - 주소, 이력 등등

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
         <div class="container" data-aos="zoom-in">
             <div class="text-center">
                 <h3>Java Backend 멘토링 모집 중</h3>
-                <p>얼리버드 코스로 처음 등록할 시 연장할 때에도 할인된 가격으로 연장 가능합니다. (1개월 단위 연장 가능).</p>
+                <p>얼리버드 코스로 처음 등록할 시 연장할 때에도 할인된 가격으로 연장 가능합니다. (1개월 단위 연장 가능)</p>
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <div class="col">
                         <div class="card">
@@ -988,7 +988,7 @@
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
                             <span>- 개발 경력 8년 이상, 수업 경력 4년 이상 </span>
                             <hr style="margin:0.5rem;border-top: 2px dotted"/>
-                            <span>- 홍익대 조치원 캠퍼스 취업 특강 (24.11) </span>
+                            <span>- 홍익대학교 IT 취업 특강 (25.09, 24.11) </span>
                             <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.12) </span>
                             <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
                             <!--                            <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>-->
@@ -1056,8 +1056,8 @@
                             </a>
                         </h3>
                         <p>
-                            경기도 성남시 분당구 <br>
-                            장미로 102<br><br>
+                            경기도 용인시 수지구 <br>
+                            문인로 59 <br><br>
                             <strong>제휴 문의 :</strong> topojs8@naver.com<br>
                         </p>
                         <div class="social-links mt-3">
