--- a/index.html
+++ b/index.html
@@ -991,7 +991,27 @@
                             <span>- 홍익대학교 IT 취업 특강 (25.09, 24.11) </span>
                             <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.12) </span>
                             <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
-                            <!--                            <span>- 알고리즘잡스 몰입캠프 특강 (23.06) </span>-->
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
+                    <div class="member" data-aos="fade-up" data-aos-delay="100">
+                        <div class="member-img">
+                            <img src="assets/img/testimonials/user.png"
+                                 style="max-width:40%; height:35%; margin: 20px -60px 0 80px;" alt="">
+                            <div class="social">
+                            </div>
+                        </div>
+                        <div class="member-info" style="padding-top:1px;">
+                            <a style="color:#FFC451; img-fluid;">Ethan</a> <br>
+                            <strong> - 카카오 계열 서버 개발자</strong>
+                            <hr style="margin:0.5rem"/>
+                            <span>- 팀장 경력 보유 </span>
+                            <span>- 개발 경력 7년 이상, 수업 경력 1년 이상 </span>
+                            <hr style="margin:0.5rem;border-top: 2px dotted"/>
+                            <span>- 가천대학교 IT 취업 특강 (25.11) </span>
+                            <span>- 신구대학교 IT 취업 특강 (25.10) </span>
                         </div>
                     </div>
                 </div>
