--- a/index.html
+++ b/index.html
@@ -1005,7 +1005,7 @@
                         </div>
                         <div class="member-info" style="padding-top:1px;">
                             <a style="color:#FFC451; img-fluid;">Ethan</a> <br>
-                            <strong> - 카카오 계열 서버 개발자</strong>
+                            <strong> - 카카오 자회사 개발자</strong>
                             <hr style="margin:0.5rem"/>
                             <span>- 팀장 경력 보유 </span>
                             <span>- 개발 경력 7년 이상, 수업 경력 1년 이상 </span>
