26년도 수정사항 갱신

--- a/index.html
+++ b/index.html
@@ -797,7 +797,7 @@
 
                                 </div>
                             </div>
-                            <span style="text-align:right;">2025년 11월 기준</span>
+                            <span style="text-align:right;">2026년 1월 기준</span>
                         </div>
                     </div><!-- End .content-->
                 </div>
@@ -986,10 +986,10 @@
                             <strong> - 넥슨 서버 개발자</strong>
                             <hr style="margin:0.5rem"/>
                             <span>- 카카오, 넷마블 등 여러 대기업 최종 합격 </span>
-                            <span>- 개발 경력 8년 이상, 수업 경력 4년 이상 </span>
+                            <span>- 개발 경력 9년 이상, 수업 경력 5년 이상 </span>
                             <hr style="margin:0.5rem;border-top: 2px dotted"/>
+                            <span>- 패스트캠퍼스 대용량 트래픽 강의 (26.02, 23.12) </span>
                             <span>- 홍익대학교 IT 취업 특강 (25.09, 24.11) </span>
-                            <span>- 패스트캠퍼스 대용량 트래픽 강의 (23.12) </span>
                             <span>- 한국공대 게임공학과 직무산업 특강 (23.07) </span>
                         </div>
                     </div>
@@ -1008,7 +1008,7 @@
                             <strong> - 카카오 자회사 개발자</strong>
                             <hr style="margin:0.5rem"/>
                             <span>- 팀장 경력 보유 </span>
-                            <span>- 개발 경력 7년 이상, 수업 경력 1년 이상 </span>
+                            <span>- 개발 경력 8년 이상, 수업 경력 2년 이상 </span>
                             <hr style="margin:0.5rem;border-top: 2px dotted"/>
                             <span>- 가천대학교 IT 취업 특강 (25.11) </span>
                             <span>- 신구대학교 IT 취업 특강 (25.10) </span>
@@ -1134,7 +1134,7 @@
 
     <div class="container">
         <div class="copyright">
-            <div class="small text-center text-muted">Copyright &copy; 2025 CCommit Company</div>
+            <div class="small text-center text-muted">Copyright &copy; 2026 CCommit Company</div>
         </div>
     </div>
 </footer><!-- End Footer -->
